use prewrap in report to prevent whitespace trunc

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -64,6 +64,10 @@ a:hover {
   text-decoration: underline;
 }
 
+.prewrap {
+  white-space: pre-wrap;
+}
+
 code {
   padding: 2px 4px;
   color: #D14;
